--- a/style.css
+++ b/style.css
@@ -304,4 +304,14 @@ footer .linha2 a:first-child {
         font-size: 17px;
     }
 
+    /* Footer */
+    footer .linha1{
+        flex-direction: column;
+    }
+
+    footer .endereco{
+        width: 95%;
+        margin-bottom: 20px;
+    }
+
 }
